tests/ui/associated-types/issue-23595-2.stderr
error[E0220]: associated type `anything_here_kills_it` not found for `Self`
  --> $DIR/issue-23595-2.rs:6:22
   |
LL |     type B = C<Self::anything_here_kills_it>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^ help: `Self` has the following associated type: `B`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0220`.
